# fastapi-storages

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  contributing.md  index.md  reference.md  requirements.txt  usage.md
fastapi_storages/: protocols.py
tests/: __init__.py  test_aws.py  test_main.py
