[tool.poetry]
name = "fastapi-storages"
version = "0.0.0"
description = "Fastapi Storages"
authors = ["Tobi DEGNON <tobidegnon@proton.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Tobi-De/fastapi-storages"
repository = "https://github.com/Tobi-De/fastapi-storages"
documentation = "https://fastapi-storages.readthedocs.io"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Page Counters",
    "Natural Language :: English"
]

packages = [
    {"include" = "fastapi_storages"}
]

[tool.poetry.urls]
Changelog = "https://github.com/Tobi-De/fastapi-storages/releases"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.65.2,<0.79.0"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
poetryup = "^0.7.1"

[tool.coverage.paths]
source = ["fastapi_storages", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["fastapi_storages", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
